Tests/a1/reject/23.ul
int main (int x) {
	''a'';
}